Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15459

close(2) fails with EIO on enosp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      When write switches to sync commit async due lack of disk space async error codes remain set to -28. That causes close(2) to failĀ  as ll_flush() catches the async errors and returns -EIO.

      The async errors should be catched and cleared after call to vvp_io_commit_sync() to prevent ll_flush() and close(2) from failing.

            vsaveliev Vladimir Saveliev
            vsaveliev Vladimir Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: